--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.12.3",
     "grunt-contrib-uglify": "^0.9.1"
   }
 }
