--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "BSD-3-Clause",
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.0",
     "grunt-contrib-cssmin": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0"
