Upgrade everything to https.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Learn more about Baraa and his different skill sets, work experiences and projects here!",
   "author": "Baraa Hamodi",
-  "homepage": "http://baraa.ca",
+  "homepage": "https://baraa.ca",
   "repository": {
     "type": "git",
     "url": "https://github.com/bhamodi/bhamodi.github.io.git"
