Cleaned up text.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "baraa-portfolio",
   "version": "1.0.0",
-  "description": "Learn more about Baraa and his different skill sets, work experiences and projects here!",
+  "description": "Learn more about Baraa and his different skill sets, work experiences, and projects here!",
   "author": "Baraa Hamodi",
   "homepage": "https://baraa.ca",
   "repository": {
